# victor

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  build.sh  ci.sh  format.sh  install-hooks.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup_agent_env.sh  test.sh
.githooks/: pre-push
.github/scripts/: run-bazel-ci.sh
.github/workflows/: ci.yml
backend/: BUILD.bazel  Main.kt
core/proto/: BUILD.bazel  event.proto
docs/: protocol.md
docs/deploy/: setup.md
example/greeter/android/: AndroidManifest.xml  BUILD.bazel  BackendChannel.kt  MainActivity.kt  MainActivityTest.kt
example/greeter/desktop/: Main.kt
example/greeter/kotlin/: BUILD.bazel  Main.kt  logback.xml
example/greeter/proto/: BUILD.bazel  greeter.proto
example/greeter/python/: BUILD.bazel  main.py  smoke_test.py
example/greeter/web/: App.tsx  BUILD.bazel  index.html  main.tsx  package.json  pnpm-lock.yaml  vite.config.ts
example/greeter/web/src/: App.tsx
example/kotlin/multiplatform/: BUILD.bazel  DecoratedGreeting.kt  Greeting.kt  GreetingDecorator.android.kt  GreetingDecorator.jvm.kt  GreetingTest.kt  Platform.android.kt  Platform.jvm.kt
examples/greeter/desktop/: BUILD.bazel  Main.kt  MainTest.kt
rules/: BUILD.bazel  rules.MODULE.bazel
rules/deploy/: defs.bzl
rules/kotlin/multiplatform/: defs.bzl  kmp_maven_variants_repository.bzl
rules/python/grpc/: defs.bzl
rules/web/: defs.bzl
scripts/: BUILD.bazel  main.py
skills/edge-to-edge/: SKILL.md
skills/edge-to-edge/agents/: openai.yaml
skills/navigation-3/: SKILL.md
skills/navigation-3/agents/: openai.yaml
skills/navigation-3/references/android/guide/navigation/: type-safe-destinations.md
skills/navigation-3/references/android/guide/navigation/navigation-3/: migration-guide.md
skills/third-party-maven-conflicts/: SKILL.md
skills/third-party-maven-conflicts/agents/: openai.yaml
src/backend/: BackendChannel.kt  BackendEndpoint.kt
src/common/grpc/client/: BUILD.bazel  BackendChannel.swift  BackendChannelTest.kt
src/common/kotlin/multiplatform/: BUILD.bazel  ComposeGreeting.kt
src/samples/greeter/: README.md
src/samples/greeter/android/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
src/samples/greeter/android/appRes/values/: strings.xml
src/samples/greeter/backend/: BUILD.bazel  Main.kt  MainTest.kt
src/samples/greeter/desktop/: BUILD.bazel  Main.kt
src/samples/greeter/ios/: BUILD.bazel  GreeterApp.swift  GreeterAppTest.swift  Info.plist
src/samples/greeter/proto/: BUILD.bazel
src/samples/greeter/python_client/: BUILD.bazel  main.py  smoke_test.py
src/samples/greeter/shared/: BUILD.bazel  Greeting.kt  Platform.ios.kt  Platform.wasm.kt  SharedGreetingComposeController.kt
src/samples/greeter/web/: App.tsx  BUILD.bazel  index.html  vite.config.mjs
src/samples/grpc-kmp-app/androidApp/: BUILD.bazel
src/samples/grpc-kmp-app/androidApp/src/main/: AndroidManifest.xml
src/samples/grpc-kmp-app/androidApp/src/main/kotlin/kotlinx/rpc/sample/: MainActivity.kt
src/samples/grpc-kmp-app/androidApp/src/main/res/xml/: network_security_config.xml
src/samples/grpc-kmp-app/composeApp/: BUILD.bazel
src/samples/grpc-kmp-app/composeApp/src/androidMain/kotlin/kotlinx/rpc/sample/: ServerHost.android.kt
src/samples/grpc-kmp-app/composeApp/src/commonMain/kotlin/kotlinx/rpc/sample/: App.kt
src/samples/grpc-kmp-app/composeApp/src/iosMain/kotlin/kotlinx/rpc/sample/: MainViewController.kt
src/samples/grpc-kmp-app/composeApp/src/jvmMain/kotlin/kotlinx/rpc/sample/: main.kt
src/samples/grpc-kmp-app/iosApp/: BUILD.bazel
src/samples/grpc-kmp-app/iosApp/iosApp/: Info.plist
src/samples/grpc-kmp-app/ktor-server/: BUILD.bazel
src/samples/grpc-kmp-app/ktor-server/src/main/kotlin/kotlinx/rpc/sample/: Application.kt
src/samples/grpc-kmp-app/server/: BUILD.bazel
src/samples/grpc-kmp-app/server-shared/: BUILD.bazel
src/samples/grpc-kmp-app/server-shared/src/main/kotlin/kotlinx/rpc/sample/: MessageServiceImpl.kt
src/samples/grpc-kmp-app/server/src/main/kotlin/kotlinx/rpc/sample/: Application.kt
src/samples/grpc-kmp-app/shared/: BUILD.bazel
src/samples/grpc-kmp-app/shared/src/commonMain/kotlin/kotlinx/rpc/sample/: Platform.kt
src/samples/grpc-kmp-app/shared/src/iosMain/kotlin/kotlinx/rpc/sample/: Platform.ios.kt
src/samples/grpc-kmp-app/shared/src/jvmMain/kotlin/kotlinx/rpc/sample/: Platform.jvm.kt
toolchains/: BUILD.bazel  package.json  pnpm-lock.yaml  toolchains.MODULE.bazel
toolchains/android/: defs.bzl
toolchains/kotlin/compose/: BUILD.bazel
toolchains/python/proto/: BUILD.bazel
tools/: BUILD.bazel  tools.MODULE.bazel
tools/android/: BUILD.bazel  android_sdk_repository.BUILD.bazel.tpl  android_sdk_repository.bzl  defs.bzl  ensure_sdk.sh  service.bzl
tools/deploy/: BUILD.bazel  deploy_runner.py  deploy_targets_expected.txt  dev_environment.json  emit_github_actions_outputs.py  emit_github_actions_outputs_test.py  list_deploy_targets.py  run_deploy.sh  runner_lib.py  runner_test.py
tools/format/ktfmt/: BUILD.bazel
tools/format/prettier/: BUILD.bazel
tools/format/ruff/: BUILD.bazel
tools/python/grpc/: grpc_python_plugin.py
web/: BUILD.bazel  index.ts  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  grpcWebGreeter.ts  index.css
