load("@npm//:defs.bzl", "npm_link_all_packages")

# Marks the workspace root as a Bazel package and exposes shared JS deps.
npm_link_all_packages(name = "node_modules")

alias(
    name = "node_modules_public",
    actual = ":node_modules",
    visibility = ["//visibility:public"],
)

alias(
    name = "format",
    actual = "//tools/format:format",
    visibility = ["//visibility:public"],
)

alias(
    name = "format_check",
    actual = "//tools/format:format_check",
    visibility = ["//visibility:public"],
)

exports_files(
    ["format.sh"],
    visibility = ["//tools/format:__pkg__"],
)
