alias(
    name = "format",
    actual = "//build/tools/format:format",
    visibility = ["//visibility:public"],
)

alias(
    name = "format_check",
    actual = "//build/tools/format:format_check",
    visibility = ["//visibility:public"],
)

exports_files(
    ["format.sh"],
    visibility = ["//build/tools/format:__pkg__"],
)
