# Core rules used in this repository.
# keep-sorted start
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "grpc", version = "1.80.0")
bazel_dep(name = "grpc-java", version = "1.78.0.bcr.1")
bazel_dep(name = "grpc_kotlin", version = "1.5.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "ruff_prebuilt", version = "0.15.0.1")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
# keep-sorted end

single_version_override(
    module_name = "rules_swift",
    version = "3.4.2",
)

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = ["//third_party/grpc:typing_extensions_import_path.patch"],
    version = "1.80.0",
)
