# Core rules used in this repository.
# keep-sorted start
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "grpc", version = "1.80.0")
bazel_dep(name = "grpc-java", version = "1.78.0.bcr.1")
bazel_dep(name = "grpc_kotlin", version = "1.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "ruff_prebuilt", version = "0.15.0.1")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_robolectric", version = "4.16.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
# keep-sorted end

single_version_override(
    module_name = "rules_android",
    patch_strip = 1,
    patches = [
        "//third_party/android:rules_android_desugar_jvm_heap.patch",
        "//third_party/android:rules_android_java21_asm.patch",
        "//third_party/android:rules_android_mobile_install_grpc_adapters_base.patch",
        "//third_party/android:rules_android_mobile_install_grpc_kind.patch",
        "//third_party/android:rules_android_skip_host_platform_split.patch",
    ],
    version = "0.7.1",
)

single_version_override(
    module_name = "rules_kotlin",
    patch_strip = 1,
    patches = [
        "//third_party/kotlin:rules_kotlin_multiplatform_flags.patch",
    ],
    version = "2.3.20",
)

single_version_override(
    module_name = "rules_swift",
    version = "3.4.2",
)

single_version_override(
    module_name = "grpc-java",
    patch_strip = 1,
    patches = [
        "//third_party/grpc-java:prebuilt_grpc_java_plugin_build.patch",
        "//third_party/grpc-java:prebuilt_grpc_java_plugin_module.patch",
        "//third_party/grpc-java:protobuf_java_runtime_compiler.patch",
        "//third_party/grpc-java:protobuf_java_runtime_protobuf.patch",
        "//third_party/grpc-java:protobuf_java_runtime_protobuf_lite.patch",
    ],
    version = "1.78.0.bcr.1",
)

single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = [
        "//third_party/protobuf:java_core_toolchain_runtime_from_maven.patch",
        "//third_party/protobuf:java_lite_toolchain_runtime_from_maven.patch",
        "//third_party/protobuf:protobuf_java_aliases_from_maven.patch",
        "//third_party/protobuf:prebuilt_protoc_for_direct_label.patch",
    ],
    version = "33.4",
)

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "//third_party/grpc:py_grpc_library_plugin_override.patch",
        "//third_party/grpc:typing_extensions_import_path.patch",
    ],
    version = "1.80.0",
)
