load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "scripts_lib",
    srcs = ["main.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "scripts",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":scripts_lib"],
    visibility = ["//visibility:public"],
)
