load("@aspect_rules_js//js:proto.bzl", "js_proto_toolchain")
load("@toolchains_npm//:defs.bzl", "npm_link_all_packages")
load(
    "@toolchains_npm//toolchains:@bufbuild/protoc-gen-es/package_json.bzl",
    protoc_gen_es_bin = "bin",
)

npm_link_all_packages(name = "node_modules")

protoc_gen_es_bin.protoc_gen_es_binary(name = "protoc_gen_es")

js_proto_toolchain(
    name = "gen_es",
    plugin_bin = ":protoc_gen_es",
    plugin_name = "es",
    plugin_options = [
        "keep_empty_files=true",
        "target=js+dts",
        "import_extension=js",
    ],
    runtime = ":node_modules/@bufbuild/protobuf",
    visibility = ["//visibility:public"],
)
