# Root-level Go SDK pin: rules_android's Gazelle deps currently resolve a module
# that requires Go >= 1.23.
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.10")

# Pin the Python toolchain for Python targets.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14.2",
)
use_repo(python, "python_3_14_2")

# Expose Bazel-managed Android SDK/toolchains for first-party android_* targets.
android_sdk_repository_extension = use_extension(
    "//tools:android/android_sdk_repository.bzl",
    "android_sdk_repository_extension",
)
android_sdk_repository_extension.configure(
    api_level = 36,
    build_tools_version = "36.0.0",
)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# Register repository-specific toolchains.
register_toolchains("//toolchains/kotlin:jvm21_toolchain")

register_toolchains("//toolchains/python/proto:python_pip_runtime_source_toolchain")

register_toolchains("//toolchains/web/proto:gen_es_toolchain")
