load("@rules_android//rules:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "app_lib",
    srcs = ["MainActivity.kt"],
    manifest = "AndroidManifest.xml",
    plugins = ["//toolchains/kotlin/compose:compose_compiler_plugin"],
    resource_files = glob(["res/**"]),
    deps = [
        "@third_party//:androidx_activity_activity",
        "@third_party//:androidx_activity_activity_compose",
        "@third_party//:androidx_compose_material3_material3_android",
    ],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [":app_lib"],
    visibility = ["//visibility:public"],
)
