load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "victor_api_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "victor_api_java_proto",
    deps = [":victor_api_proto"],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "victor_api_java_grpc",
    srcs = [":victor_api_proto"],
    deps = [":victor_api_java_proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "victor_api_py_pb2",
    deps = [":victor_api_proto"],
    use_protobuf = False,
    visibility = ["//visibility:public"],
)

py_grpc_library(
    name = "victor_api_py_pb2_grpc",
    srcs = [":victor_api_proto"],
    deps = [":victor_api_py_pb2"],
    visibility = ["//visibility:public"],
)
