load("@aspect_rules_js//js:defs.bzl", "js_info_files", "js_library")
load("@com_google_protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "victor_api_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "victor_api_java_proto",
    visibility = ["//visibility:public"],
    deps = [":victor_api_proto"],
)

kt_jvm_grpc_library(
    name = "victor_api_kt_grpc",
    srcs = [":victor_api_proto"],
    visibility = ["//visibility:public"],
    deps = [":victor_api_java_proto"],
)

py_proto_library(
    name = "victor_api_py_pb2",
    use_protobuf = False,
    visibility = ["//visibility:public"],
    deps = [":victor_api_proto"],
)

py_grpc_library(
    name = "victor_api_py_pb2_grpc",
    srcs = [":victor_api_proto"],
    visibility = ["//visibility:public"],
    deps = [":victor_api_py_pb2"],
)

js_library(
    name = "victor_api_js_proto",
    visibility = ["//visibility:public"],
    deps = [":victor_api_proto"],
)

js_info_files(
    name = "victor_api_js_proto_files",
    srcs = [":victor_api_js_proto"],
    include_transitive_types = True,
    include_types = True,
    visibility = ["//visibility:public"],
)
