load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "python_client",
    srcs = ["main.py"],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//example/greeter/proto:victor_api_py_pb2",
        "//example/greeter/proto:victor_api_py_pb2_grpc",
    ],
)

py_test(
    name = "python_client_smoke_test",
    timeout = "moderate",
    srcs = ["smoke_test.py"],
    args = [
        "$(location //example/greeter/kotlin:backend)",
        "$(location :python_client)",
    ],
    data = [
        ":python_client",
        "//example/greeter/kotlin:backend",
    ],
    local = True,
    main = "smoke_test.py",
)
