load("@npm//:defs.bzl", "npm_link_all_packages")
load(
    "@npm//example/greeter/web:typescript/package_json.bzl",
    typescript_bin = "bin",
)
load(
    "@npm//example/greeter/web:vite/package_json.bzl",
    vite_bin = "bin",
)

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "srcs",
    srcs = glob([
        "src/**/*",
        "index.html",
        "tsconfig*.json",
        "vite.config.ts",
    ]),
)

vite_bin.vite_binary(
    name = "dev",
    args = ["dev", "--host"],
    data = [
        ":node_modules",
        ":srcs",
        "package.json",
    ],
    chdir = package_name(),
    visibility = ["//visibility:public"],
)

vite_bin.vite(
    name = "build",
    args = ["build"],
    srcs = [
        ":node_modules",
        ":srcs",
        "package.json",
    ],
    out_dirs = ["dist"],
    chdir = package_name(),
    visibility = ["//visibility:public"],
)

typescript_bin.tsc_test(
    name = "typecheck",
    args = ["--noEmit", "--project", "tsconfig.json"],
    data = [
        ":node_modules",
        ":srcs",
        "package.json",
    ],
    chdir = package_name(),
    visibility = ["//visibility:public"],
)

alias(
    name = "web",
    actual = ":build",
    visibility = ["//visibility:public"],
)
