load("//rules/deploy:defs.bzl", "deploy_web_app")
load("//rules/web:defs.bzl", "web_app")

web_app(
    name = "web",
    srcs = [
        "App.tsx",
        "index.html",
        "main.tsx",
    ],
    visibility = ["//visibility:public"],
    vite_config = "vite.config.mjs",
    deps = ["//example/greeter/proto:victor_api_js_proto_files"],
)

deploy_web_app(
    name = "deploy",
    app = ":web",
    backend = "//example/greeter/kotlin:deploy",
    site = "greeter-web-dev",
    visibility = ["//visibility:public"],
)
