load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//rules/kotlin/multiplatform:defs.bzl", "kt_multiplatform_library")

kt_multiplatform_library(
    name = "library",
    srcs = {
        "common": [
            "ComposeGreeting.kt",
            "Greeting.kt",
        ],
        "android": ["Platform.android.kt"],
        "jvm": ["Platform.jvm.kt"],
    },
    android_custom_package = "victor.example.multiplatform",
    plugins = ["//toolchains/kotlin/compose:compose_compiler_plugin"],
    visibility = ["//visibility:public"],
    deps = {
        "android": ["@third_party_maven//:androidx_compose_runtime_runtime_android"],
        "jvm": ["@third_party_maven//:androidx_compose_runtime_runtime_desktop"],
    },
)

kt_jvm_test(
    name = "library_jvm_test",
    srcs = ["GreetingTest.kt"],
    test_class = "victor.example.multiplatform.GreetingTest",
    deps = [
        ":library_jvm",
        "@third_party_maven//:junit_junit",
    ],
)
