load("@com_google_protobuf//bazel/toolchains:proto_lang_toolchain.bzl", "proto_lang_toolchain")

proto_lang_toolchain(
    name = "python_pip_runtime_toolchain",
    command_line = "--python_out=%s",
    progress_message = "Generating Python proto_library %{label}",
    runtime = "@pip//protobuf",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "python_pip_runtime_source_toolchain",
    exec_compatible_with = [],
    target_compatible_with = [],
    toolchain = ":python_pip_runtime_toolchain",
    toolchain_type = "@com_google_protobuf//bazel/private:python_toolchain_type",
    visibility = ["//visibility:public"],
)
