load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("//build/rules:defs.bzl", "kmp_source_sets", "kmp_targets", "kt_multiplatform_library")

kt_multiplatform_library(
    name = "backend_endpoint",
    source_sets = kmp_source_sets(srcs = {
        "common": ["BackendEndpoint.kt"],
    }),
    targets = kmp_targets(
        [
            "android",
            "iosSimulatorArm64",
            "jvm",
        ],
        android_namespace = "victor.backend.client",
        apple_framework_module_name = "VictorBackendClient",
    ),
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "backend_channel",
    srcs = ["BackendChannel.kt"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend_endpoint",
        "@third_party_maven//:io_grpc_grpc_okhttp",
    ],
)

kt_jvm_test(
    name = "backend_channel_test",
    srcs = ["BackendChannelTest.kt"],
    test_class = "victor.backend.client.BackendChannelTest",
    deps = [
        ":backend_channel",
        ":backend_endpoint",
        "@third_party_maven//:junit_junit",
    ],
)
