load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")
load("//build/rules:defs.bzl", "backend_service_url_config", "deploy_grpc_server")

backend_service_url_config(
    name = "backend_config",
    custom_package = "victor.greeter.shared",
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "backend_lib",
    srcs = ["Main.kt"],
    deps = [
        "//src/samples/greeter/proto:victor_api_kt_grpc",
        "@third_party_maven//:ch_qos_logback_logback_classic",
        "@third_party_maven//:com_linecorp_armeria_armeria",
        "@third_party_maven//:com_linecorp_armeria_armeria_grpc",
    ],
)

kt_jvm_test(
    name = "backend_test",
    srcs = ["MainTest.kt"],
    test_class = "victor.backend.MainTest",
    deps = [
        ":backend_lib",
        "@third_party_maven//:junit_junit",
    ],
)

kt_jvm_binary(
    name = "backend",
    main_class = "victor.backend.MainKt",
    resource_strip_prefix = "src/samples/greeter/backend",
    resources = ["logback.xml"],
    visibility = ["//visibility:public"],
    runtime_deps = [":backend_lib"],
)

deploy_grpc_server(
    name = "deploy",
    app = ":backend",
    service = "greeter-backend-dev",
    visibility = ["//visibility:public"],
)
